# peritiad

./: CMakeLists.txt  Makefile  README.md  peritia.desktop  peritia.pro  pyproject.toml  setup.cfg  setup.py
AboutDialog/: AboutDialog.pro  aboutdalog.ui  aboutdialog.cpp  aboutdialog.h  main.cpp
build-peritia-Desktop-Release/: Makefile  moc_aboutdialog.cpp  moc_peritia.cpp  ui_peritia.h
build-peritia-Desktop-Release/.qtc_clangd/: compile_commands.json
clock/: Makefile  analogclock  moc_analogclock.cpp
docs/: conf.py  index.md  introduction.rst  requirements.txt
docs/source/: conf.py  index.md  index.rst  summary.rst
gallery/: README.md
notepad/: 1  CMakeLists.txt  Makefile  main.cpp  moc_notepad.cpp  moc_peritia.cpp  notepad  notepad.cpp  notepad.h  notepad.qrc  notepad.ui  peritia.cpp  peritia.h  peritia.pro  peritia.ui  ui_notepad.h  ui_peritia.h
oldsrc/: 1  Dogecoin.csv  animated_gif.py  registered-blind-and-partially-sighted-people-by-age-group.csv
release/: Makefile  README  moc_aboutdialog.cpp  moc_datetimedialog.cpp  moc_kibedialog.cpp  moc_licensedialog.cpp  moc_loginwidget.cpp  moc_peritia.cpp  moc_settingsdialog.cpp  moc_shortcutdialog.cpp  moc_welcomedialog.cpp  moc_wigglylabel.cpp  ui_datetimedialog.h  ui_kibedialog.h  ui_licensedialog.h  ui_loginwidget.h  ui_peritia.h  ui_settingsdialog.h  ui_shortcutdialog.h  ui_shortcutsdialog.h  ui_welcomedialog.h
release/.qtc_clangd/: compile_commands.json
resources/: peritia.qrc
resources/backgrounds/: README
resources/docs/: LICENSE.md  LICENSE.odt  LICENSE.txt  clocks.qml  londonclock.qml  nairobiclock.qml  newyorkclock.qml
resources/docs/clockcontent/: Clock.qml
src/: .CMakeLists.txt.swp  .qmake.stash  CMakeLists.txt  Makefile  a.out  aboutcpp  aboutdialog.cpp  aboutdialog.h  aboutp.ui  analogclockplugin.h  as.py  but.cpp  curl.cpp  datetime.cpp  lambda.cpp  logger.cpp  logger.h  loginwidget.cpp  loginwidget.h  main.cpp  moc_notepad.cpp  moc_peritia.cpp  moc_predefs.h  oldaboutdialog.h  oldperitiaaboutcpp  oldtext2aslcpp  oldversion.cpp  oldversion.h  pa.cpp  peritia  peritia-about.cpp  peritia-about.hpp  peritia-help.cpp  peritia-help.hpp  peritia-properties.cpp  peritia-properties.hpp  peritia-summary.cpp  peritia-summary.hpp  peritia-temp-grepper.h  peritia-text2asl.cpp  (+21 more)
src/.qtc_clangd/: compile_commands.json
src/app/: CMakeLists.txt  main.cpp  peritia.cpp  peritia.h  peritia.ui
src/dialogs/: aboutdialog.cpp  aboutdialog.h  datetimedialog.cpp  datetimedialog.h  licensedialog.cpp  licensedialog.h  oldlicensedialog.cpp  oldlicensedialog.h  oldwelcomedialog.cpp  oldwelcomedialog.h  settingsdialog.cpp  settingsdialog.h  shortcutdialog.cpp  shortcutdialog.h  welcomedialog.cpp  welcomedialog.h
src/forms/: datetimedialog.ui  licensedialog.ui  loginwidget.ui  peritia.ui  settingsdialog.ui  shortcutdialog.ui  welcomedialog.ui
src/old/: welcomedialog.cpp  welcomedialog.h  wigglylabel.cpp  wigglylabel.h
src/utils/: datetime.cpp  random-int.cpp
src/widgets/: loginwidget.cpp  loginwidget.h  wigglylabel.cpp  wigglylabel.h
tools/: linuxDeploy.sh
version/: version
